[gd_scene load_steps=5 format=3 uid="uid://dgqnrfxcg85mn"]

[ext_resource type="Script" uid="uid://bvmmvb6x4kwxn" path="res://scenes/Main.gd" id="1_elqb8"]
[ext_resource type="Texture2D" uid="uid://dqtr6nup4dhfc" path="res://assets/ui/menu.png" id="2_0bbpv"]
[ext_resource type="Script" uid="uid://dnt2dv8xsjcp0" path="res://scripts/settingtransitions/SafeArea.gd" id="3_i8f85"]
[ext_resource type="PackedScene" uid="uid://i6hclmd74t8l" path="res://scripts/settingtransitions/SettingsMenu.tscn" id="4_rarhs"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_elqb8")
metadata/_custom_type_script = "uid://ccfdivqk34v2g"

[node name="SafeAreaRoot" type="MarginContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("3_i8f85")

[node name="StartMenu" type="Control" parent="SafeAreaRoot"]
layout_mode = 2

[node name="ColorRect" type="TextureRect" parent="SafeAreaRoot/StartMenu"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_0bbpv")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SafeAreaRoot/StartMenu"]
layout_mode = 0
offset_left = 749.0
offset_top = 424.0
offset_right = 964.07935
offset_bottom = 650.1904
scale = Vector2(1.26, 1.26)
theme_override_constants/separation = 30
alignment = 1

[node name="ButtonStart" type="Button" parent="SafeAreaRoot/StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Start
"

[node name="ButtonContinue" type="Button" parent="SafeAreaRoot/StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Continue
"

[node name="ButtonSettings" type="Button" parent="SafeAreaRoot/StartMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="SettingsMenu" parent="." instance=ExtResource("4_rarhs")]
offset_left = 1093.0
offset_top = 453.0
offset_right = 1093.0
offset_bottom = 453.0

[connection signal="pressed" from="SafeAreaRoot/StartMenu/VBoxContainer/ButtonStart" to="." method="_on_start_pressed"]
[connection signal="pressed" from="SafeAreaRoot/StartMenu/VBoxContainer/ButtonContinue" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="SafeAreaRoot/StartMenu/VBoxContainer/ButtonSettings" to="." method="_on_settings_pressed"]
